add api teams
